--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "bcryptjs": "^2.4.0",
     "body-parser": "^1.16.0",
     "chalk": "^1.1.3",
+    "compression": "^1.7.2",
     "cookie-session": "^2.0.0-alpha.2",
     "cross-env": "^3.1.4",
     "debug": "^2.6.0",
